# vedam_ai

./: .gitignore  README.md  app.py  assistant.py  config.py  db.py  embeddings.py  file_handler.py  main.py  ocr_loader.py  pyproject.toml  requirements.txt  vedam_pdf_ocr_reader.py  vedam_pdf_reader.py
output/: page0.txt  page1.txt  page1002.txt  page1004.txt  page1005.txt  page1006.txt  page1014.txt  page1017.txt  page102.txt  page1020.txt  page1021.txt  page1022.txt  page1024.txt  page1025.txt  page1026.txt  page1028.txt  page1030.txt  page1032.txt  page1033.txt  page1037.txt  page1042.txt  page1043.txt  page1044.txt  page1046.txt  page1049.txt  page1052.txt  page1053.txt  page1055.txt  page1057.txt  page1060.txt  page1065.txt  page1066.txt  page1067.txt  page1069.txt  page1071.txt  page1072.txt  page1075.txt  page1078.txt  page1080.txt  page1081.txt  (+485 more)
output/bhagavat_gita/: page0.txt  page10.txt  page100.txt  page101.txt  page102.txt  page103.txt  page104.txt  page105.txt  page106.txt  page107.txt  page108.txt  page109.txt  page11.txt  page110.txt  page111.txt  page112.txt  page113.txt  page114.txt  page115.txt  page116.txt  page117.txt  page118.txt  page119.txt  page12.txt  page120.txt  page121.txt  page122.txt  page123.txt  page124.txt  page125.txt  page126.txt  page127.txt  page128.txt  page129.txt  page13.txt  page130.txt  page131.txt  page132.txt  page133.txt  page134.txt  (+385 more)
output/bhagavata_purana/: page1.txt  page10.txt  page100.txt  page1000.txt  page1001.txt  page1002.txt  page1003.txt  page1004.txt  page1005.txt  page1006.txt  page1007.txt  page1008.txt  (+1578 more)
(+3638 files in other folders)
